#pragma once

class Juego
{
private:

public:
    Juego()
    {
    }
    ~Juego();
};