#pragma once

class Puntuacion
{
private:
    /* data */
public:
    Puntuacion(/* args */);
    ~Puntuacion();
};

Puntuacion::Puntuacion(/* args */)
{
}

Puntuacion::~Puntuacion()
{
}
