@startuml PongGame

class Ventana {
  + Actualizar(actualizables: List<Actualizable*>)
  + Dibujar(dibujos: List<Dibujo*>)
  + Cerrar()
}

class Dibujo {
  - x: int
  - y: int
  - archivo: fstream
  - recurso: string
  + Dibujo(x: int, y: int, recurso: string)
  + Mover(x: int, y: int)
  + SubirY(y: int)
  + BajarY(y: int)
  + Dibujar()
  + Limpiar()
}

class Actualizable {
  + Actualizar()
}

class Controlador {
  - paletaJ1: Dibujo
  - paletaJ2: Dibujo
  - ejecucion: bool&
  + Controlador(jugador1: Dibujo, jugador2: Dibujo, ejec: bool&)
  + Actualizar()
}

class Escenario {
  - pelota: Dibujo
  - paletaJ1: Dibujo
  - paletaJ2: Dibujo
  - velocidadPelotaX: int
  - velocidadPelotaY: int
  + Escenario(pelota: Dibujo, paletaJ1: Dibujo, paletaJ2: Dibujo)
  + GestionarMovimientoPelota()
}

class Juego 
class Personaje 
class Marco {
  + Dibujar()
}
class Puntuacion

Ventana "1" --o "0..*" Actualizable

Dibujo "*" --o "1" Actualizable 

Controlador -- Dibujo 
Escenario -- Dibujo 
Juego -- Personaje 
Marco -- Dibujo 
Puntuacion -- Dibujo 

@enduml